resources/css/style.css
* {
  margin: 0;
  padding: 0;
}

/*media query */

@media (min-size: 200px) and (max-size: 700px) {
  div a {
    position: fixed;
    width: 100%;
    margin-top: 40em;
  }


  .pswd_2 {

  }
}
/*end query*/

html {
  font-size: 18px;
}

body {
  background-color: #000;
}

.heading {
  text-align: center;
  font-size: 3em;
  color: darkorange;
}

/* start form styles */


.form-layout {
  width: 100%;
  text-align: center;
  margin: 1em 0 1em 0;
  padding: 2em;
}


.fName {
  margin-bottom: 1.8em;
  margin-right: .6em;
}

.lName {
  margin-bottom: 1.8em;
  margin-right: .6em;
}

.email {
  margin-bottom: 1.8em;
  margin-left: 4em;
}

.pswd_1 {
  margin-bottom: 1.8em;
  margin-right: 5.6em;
}

.pswd_2 {
  margin-right: 7.2em;
}

label {
  color: darkorange;
  font-size: 2em;
  margin: 1em;
}

input {
  font-size: 2em;
  color: #ff8000;
  border-radius: 5px;
  border-color: darkorange;
}

.button {
  margin-top: 10em;
}


button {
  padding: 10px;
  font-size: 1.2em;
  font-family: fantasy;
  font-weight: bold;
  border-radius: 15px;
  background-color: darkorange;
  color: #000;
}

button:active {
  background-color: ghostwhite;
}

.button:active {
  position: relative;
  top: 3px;
  right: 3px;

}

/* end form styles */
.more-info {
  display: flex;
  width: 100%;
}

div a {
  justify-content: center;
  align-items: center;
  position: absolute;
  width: inherit;
  font-size: 1.3em;
  margin-top: 6em;
  margin-right: 6em;
}

div a {
  color: darkorange;
}

